--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Correspondencia</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <!-- Vite inyecta aquí el bundle -->
     <script type="module" src="/src/main.jsx"></script>
   </head>
